<resources>
    <!--  Arrays  -->
    <string-array name="ChartTypes">
        <item>Fuel usage</item>
        <item>Cost per liter</item>
        <item>Total cost</item>
    </string-array>
    <!--  Strings  -->
    <string name="app_name">CarInfo</string>
    <string name="entries">Entries</string>
    <string name="fuelUsage">Fuel usage</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="putCarName">Put a car name</string>
    <string name="save">Save</string>
    <string name="creatingCar">Creating car</string>
    <string name="editingCar">Editing car</string>
    <string name="carsList">Cars list</string>
    <string name="removeCars">Remove</string>
    <string name="doSaveCarsQ">Save cars?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Cancel">Cancel</string>
    <string name="cars">Cars</string>
    <string name="entryType">Entry type</string>
    <string name="fuel">Fuel</string>
    <string name="oil">Oil</string>
    <string name="odometer">Odometer</string>
    <string name="mileage">Mileage</string>
    <string name="or">OR</string>
    <string name="fuelAmount">Fuel amount</string>
    <string name="perLiter">Per liter</string>
    <string name="entriesFor">Entries for</string>
    <string name="carsSavedAfterEntry">Entry added successfully</string>
    <string name="addEntry">Add entry</string>
    <string name="Next">Next</string>
    <string name="dataChangedWantSave">Data changed, do you want to save?</string>
    <string name="remindAfter">Remind after (km)</string>
    <string name="oil_remind_const_15k">15000</string>
    <string name="selectDate">Select date</string>
    <string name="carRemoved">Car removed</string>
    <string name="entryRemoved">Entry removed</string>
    <string name="pickChartColor">Pick data set color</string>
    <string name="stations">Stations</string>
    <string name="addingStation">Adding stations</string>
    <string name="putPointName">Put a point name</string>
    <string name="pointName">Point name</string>
    <string name="radius_m">Radius [m]</string>
    <string name="addPoint">Save point</string>
    <string name="editPoint">Edit point</string>
    <string name="editingStation">Editing point</string>
    <string name="removeStation">Remove point</string>
    <string name="addMarkerOnMyLocation">Add marker on my location</string>
    <string name="YouAreNearStation">You are near station</string>
    <string name="DontForgetToAddEntry">Do not forget to add an entry</string>
    <string name="Date">Date</string>
    <string name="FuelConsumptionChart">Fuel consumption [l/100km]</string>
    <string name="chartType">Chart type</string>
    <string name="CostPerLiterChart">Cost per liter [zł]</string>
    <string name="TotalCostChart">Total cost [zł]</string>
    <string name="DaysToInspection">Days to inspection</string>
    <string name="carInspection">Car inspection</string>
    <string name="lastInspectionDate">Last inspection date</string>
    <string name="remindInOneYear">Remind in one year</string>
    <string name="remindInTwoYears">Remind in two years</string>
    <string name="remindInThreeYears">Remind in three years</string>
    <string name="carName">Car name</string>
    <string name="summary">Summary</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="averageOdometer">Average odometer</string>
    <string name="averagePricePerLiter">Average price per liter</string>
    <string name="avgTotalPrice">Average total price</string>
    <string name="avgFuelAmount">Average fuel amount</string>
    <string name="bestConsumption">Best consumption</string>
    <string name="worstConsumption">Worst consumption</string>
    <string name="allVehicles">All vehicles</string>
    <string name="showFuelUsageOnGraph">Show fuel usage on graph</string>
    <string name="specialPlaces">Special places</string>
    <string name="notifyRadius_m">Notify about entry radius [m]</string>
    <string name="addingPlace">Adding place</string>
    <!-- Error messages-->
    <string name="couldNotGetCars">Error while getting vehicles</string>
    <string name="couldNotSaveCars">Error while saving vehicles</string>
    <string name="couldNotRemoveCars">Error while removing vehicles</string>
    <string name="mileageInputError">Mileage is invalid</string>
    <string name="fuelAmountInputError">Fuel amount is invalid</string>
    <string name="odometerInputError">Odometer is invalid</string>
    <string name="perLiterInputError">Per liter value is invalid</string>
    <string name="carsNotSavedAfterEntry">Could not add entry</string>
    <string name="remindAfterInputError">Remind after value is invalid</string>
    <string name="carNameAlreadyExists">Name already exists</string>
    <string name="carNameTooLong">Name too long</string>
    <string name="invalidCarName">Invalid name</string>
    <string name="unknownError">Unknown error occurred</string>
    <string name="couldNotRemoveEntry">Error while removing entry</string>
    <string name="savingPointError">Error while saving point</string>
    <string name="pointNameCannotBeEmpty">Point name cannot be empty</string>
    <string name="radiusCannotBeEmpty">Radius cannot be empty</string>
</resources>
