<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FuelEntryActivity">

    <EditText
            android:id="@+id/etOdometer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="8"
            app:layout_constraintBottom_toBottomOf="@+id/tvOdometer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvOdometer"
            app:layout_constraintTop_toTopOf="@+id/tvOdometer"
            tools:targetApi="o" />

    <EditText
            android:id="@+id/etFuelAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:maxLength="6"
            app:layout_constraintBottom_toBottomOf="@+id/tvFuelAmount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvFuelAmount"
            app:layout_constraintTop_toTopOf="@+id/tvFuelAmount"
            tools:targetApi="o" />

    <EditText
            android:id="@+id/etPerLiter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:maxLength="6"
            app:layout_constraintBottom_toBottomOf="@+id/tvPerLiter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvPerLiter"
            app:layout_constraintTop_toTopOf="@+id/tvPerLiter"
            tools:targetApi="o" />

    <TextView
            android:id="@+id/tvOdometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/etOdometer"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/odometer"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tvFuelAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:labelFor="@id/etFuelAmount"
            android:text="@string/fuelAmount"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOdometer" />

    <TextView
            android:id="@+id/tvPerLiter"
            android:labelFor="@id/etPerLiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/perLiter"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFuelAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>